--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,13 +31,17 @@
     <string name="you_have_arrived_at">You have arrived at</string>
 
     <!--Login-->
-    <string name="login_page_two_title">Hi,\nyou just opened Open.</string>
-    <string name="login_page_two_body">Open is a search and navigation app built on open source software and open data. One of those open data sources we’re using is OpenStreetMap. This is not an OSM editor app, but we’re asking users to log in using an OpenStreetMap account.</string>
-    <string name="login_page_three_title">No tracking.\nJust tracing.</string>
-    <string name="login_page_three_body">Once you’ve logged into your OSM account, you’ll be given the option to let Open collect GPS traces from your phone when it’s in Navigation Mode. Other than this optional collection, Open doesn’t log any of your location data. (Seriously. Nothing.)</string>
-    <string name="login_page_three_learn_more">Learn more</string>
-    <string name="login_page_four_body">Sign up or log in with OpenStreetMap to get started.</string>
-    <string name="login_page_four_button">Continue with OpenStreetMap</string>
+    <string name="login_page_two_title">Welcome to Open.</string>
+    <string name="login_page_two_body">Open is a search and navigation app built on open source software and open data.</string>
+    <string name="login_page_three_title">We <3 OpenStreetMap.</string>
+    <string name="login_page_three_body">To use Open, you need an OpenStreetMap account. This is not an OpenStreetMap editor app, but you can use the app to collect GPS traces.</string>
+    <string name="login_page_four_title">No tracking.\nJust tracing.</string>
+    <string name="login_page_four_body">Open only collects GPS traces when you’re using Turn-by-Turn Navigation. This collection is 100% optional, and you can opt out from your OSM account.</string>
+    <string name="login_page_four_learn_more">Learn more</string>
+    <string name="login_page_five_title">If you see something, edit something.</string>
+    <string name="login_page_five_body">Open will only improve with continued contributions. If you find things in OSM that needs fixing while using Open, you should totally go fix that data.</string>
+    <string name="login_page_six_body">Sign up or log in with OpenStreetMap to get started.</string>
+    <string name="login_page_six_button">Continue with OpenStreetMap</string>
     <string name="toast_fixed_location_is_malformed">Your fixed location is malformed</string>
     <string name="logo_description">Open Logo</string>
     <string name="osm_logout">OpenStreetMap Logout</string>
