--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -32,12 +32,11 @@
     <string name="paginate_template">Mostrando %1$d de %2$d resultados</string>
 
     <!--Login-->
-    <string name="login_page_two_title">Hola,\nusted acaba de abrir Open.</string>
-    <string name="login_page_two_body">Open es una applicación de busqueda y navegacion que utiliza código abierto (Open Source) y bases de datos públicas (Open Data). Una de esas bases de datos abiertas es OpenStreetMap. Si bien esta no es una herramienta para editar mapas OSM, le pediomos a los usuarios entrar a su cuenta de OpenStreetMap.</string>
-    <string name="login_page_three_body">Una vez que haya ingresado a su cuenta de OSM, usted podrá elegir si desea o no proveer a Open con información sobre sus rutas en Modo Navegación. Más allá de eso Open no guardará ningún tipo de información (En serio. Absolutamente Nada.)</string>
-    <string name="login_page_three_learn_more">Leer más</string>
-    <string name="login_page_four_body">Cree o ingrese su cuenta de OpenStreerMap para comenza.</string>
-    <string name="login_page_four_button">Continúe con OpenStreetMap</string>
+    <string name="login_page_one_body">Open es una applicación de busqueda y navegacion que utiliza código abierto (Open Source) y bases de datos públicas (Open Data). Una de esas bases de datos abiertas es OpenStreetMap. Si bien esta no es una herramienta para editar mapas OSM, le pediomos a los usuarios entrar a su cuenta de OpenStreetMap.</string>
+    <string name="login_page_two_body">Una vez que haya ingresado a su cuenta de OSM, usted podrá elegir si desea o no proveer a Open con información sobre sus rutas en Modo Navegación. Más allá de eso Open no guardará ningún tipo de información (En serio. Absolutamente Nada.)</string>
+    <string name="login_learn_more">Leer más</string>
+    <string name="login_page_three_body">Cree o ingrese su cuenta de OpenStreerMap para comenza.</string>
+    <string name="login_button">Continúe con OpenStreetMap</string>
     <string name="toast_fixed_location_is_malformed">Su posición fija está corrupta</string>
     <string name="logo_description">Open Logo</string>
     <string name="osm_logout">Cerrar la sesión de OpenStreetMap</string>
