--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><resources>
+<?xml version="1.0" encoding="UTF-8"?>
+<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
     <string name="application_name">
     <xliff:g> OPEN </xliff:g>
   </string>
