--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
     <string name="application_name">
     <xliff:g> OPEN </xliff:g>
