--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -50,7 +50,7 @@
     <!-- destination of the trip -->
     <string name="routing_to_text">Vers</string>
     <!--  -->
-    <string name="search_hint_icon_spacer">   </string>
+    <string name="search_hint_icon_spacer">"   "</string>
     <string name="osm_attribution">Données cartographiques © OpenStreetMap</string>
     <!-- phone has no connection -->
     <string name="no_network">Connexion réseau non disponible</string>
