--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -50,7 +50,7 @@
     <!-- destination of the trip -->
     <string name="routing_to_text">Cél:</string>
     <!--  -->
-    <string name="search_hint_icon_spacer">   </string>
+    <string name="search_hint_icon_spacer">"   "</string>
     <string name="osm_attribution">Térképadatok © OpenStreetMap</string>
     <!-- phone has no connection -->
     <string name="no_network">Nincs hálózati kapcsolat</string>
