--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -49,7 +49,7 @@
     <!-- destination of the trip -->
     <string name="routing_to_text">A</string>
     <!--  -->
-    <string name="search_hint_icon_spacer">   </string>
+    <string name="search_hint_icon_spacer">"   "</string>
     <string name="osm_attribution">Map data © OpenStreetMap</string>
     <!-- phone has no connection -->
     <string name="no_network">Connessione alla rete non disponibile</string>
