--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -49,7 +49,7 @@
     <!-- destination of the trip -->
     <string name="routing_to_text">Naar</string>
     <!--  -->
-    <string name="search_hint_icon_spacer">   </string>
+    <string name="search_hint_icon_spacer">"   "</string>
     <string name="osm_attribution">Kaartgegevens © OpenStreetMap</string>
     <!-- phone has no connection -->
     <string name="no_network">Netwerkverbinding beschikbaar</string>
