--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -50,7 +50,7 @@
     <!-- destination of the trip -->
     <string name="routing_to_text">Do</string>
     <!--  -->
-    <string name="search_hint_icon_spacer">   </string>
+    <string name="search_hint_icon_spacer">"   "</string>
     <string name="osm_attribution">Dane mapy © OpenStreetMap</string>
     <!-- phone has no connection -->
     <string name="no_network">Połączenie sieciowe jest niedostępne</string>
